syntax = "proto3";

package milvus.proto.index;

option go_package = "github.com/milvus-io/milvus/internal/proto/indexpb";

import "common.proto";
import "internal.proto";
import "milvus.proto";

service IndexService {
  rpc GetComponentStates(internal.GetComponentStatesRequest) returns (internal.ComponentStates) {}
  rpc GetTimeTickChannel(internal.GetTimeTickChannelRequest) returns(milvus.StringResponse) {}
  rpc GetStatisticsChannel(internal.GetStatisticsChannelRequest) returns(milvus.StringResponse){}
  rpc RegisterNode(RegisterNodeRequest) returns (RegisterNodeResponse) {}
  rpc BuildIndex(BuildIndexRequest) returns (BuildIndexResponse){}
  rpc GetIndexStates(GetIndexStatesRequest) returns (GetIndexStatesResponse) {}
  rpc GetIndexFilePaths(GetIndexFilePathsRequest) returns (GetIndexFilePathsResponse){}
  rpc NotifyBuildIndex(NotifyBuildIndexRequest) returns (common.Status) {}
  rpc DropIndex(DropIndexRequest) returns (common.Status) {}
}

service IndexNode {
  rpc GetComponentStates(internal.GetComponentStatesRequest) returns (internal.ComponentStates) {}
  rpc GetTimeTickChannel(internal.GetTimeTickChannelRequest) returns(milvus.StringResponse) {}
  rpc GetStatisticsChannel(internal.GetStatisticsChannelRequest) returns(milvus.StringResponse){}
  rpc BuildIndex(BuildIndexRequest) returns (common.Status){}
  rpc DropIndex(DropIndexRequest) returns (common.Status) {}
}

message RegisterNodeRequest {
  common.MsgBase base = 1;
  common.Address address = 2;
}

message RegisterNodeResponse {
  common.Status status = 1;
  internal.InitParams init_params = 2;
}

message GetIndexStatesRequest {
  repeated int64 indexBuildIDs = 1;
}

message IndexInfo {
  common.IndexState state = 1;
  int64 indexBuildID = 2;
  int64 indexID = 3;
  string index_name = 4;
  string reason = 5;
}

message GetIndexStatesResponse {
  common.Status status = 1;
  repeated IndexInfo states = 2;
}

message BuildIndexRequest {
  int64 indexBuildID = 1;
  string index_name = 2;
  int64 indexID = 3;
  repeated string data_paths = 4;
  repeated common.KeyValuePair type_params = 5;
  repeated common.KeyValuePair index_params = 6;
}

message BuildIndexResponse {
  common.Status status = 1;
  int64 indexBuildID = 2;
}

message NotifyBuildIndexRequest {
  common.Status status = 1;
  int64 indexBuildID = 2;
  repeated string index_file_paths = 3;
  int64 nodeID = 4;
}

message GetIndexFilePathsRequest {
  repeated int64 indexBuildIDs = 1;
}

message IndexFilePathInfo {
  common.Status status = 1;
  int64 indexBuildID = 2;
  repeated string index_file_paths = 3;
}

message GetIndexFilePathsResponse {
  common.Status status = 1;
  repeated IndexFilePathInfo file_paths = 2;
}

message IndexMeta {
  int64 indexBuildID = 1;
  common.IndexState state = 2;
  string fail_reason = 3;
  BuildIndexRequest req = 4;
  repeated string index_file_paths = 5;
  bool mark_deleted = 6;
}

message DropIndexRequest {
  int64 indexID = 1;
}
